[WIP] OOF (got phash working tho)
replaced custom compiled opencv with apt-get one
implemented custom phash algorithm that is equal to hydrus's algorithm

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -93,9 +93,9 @@ list(APPEND LIBRARIES z)
 # OpenEXR
 list(APPEND LIBRARIES IlmImf)
 # Image parsing and processing
-list(APPEND LIBRARIES png16 jpeg tiff libjasper libwebp)
+list(APPEND LIBRARIES png16 jpeg tiff)
 # Intel
-list(APPEND LIBRARIES tbb ippiw ippicv)
+list(APPEND LIBRARIES tbb)
 # Dynamic linking
 list(APPEND LIBRARIES dl)
 
